feat: Get expenses
